@@ -96,5 +96,6 @@ and ideas to make this software available.
 	Felix Meschberger <felix.meschberger@day.com>
 	Mark Bergsma <mark@nedworks.org>
 	Tim Starling <tstarling@wikimedia.org>
+	Alan Barrett <apb@cequrux.com>
 
 	Duane Wessels <wessels@squid-cache.org>
